--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -2,6 +2,7 @@ body {
     top: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #808080;
 }
 
 #navbar {
@@ -44,16 +45,21 @@ body {
     background-color: #404040;
 }
 
-#_pages_content {
-    padding: 10px;
-}
-
 h1 {
     margin: 0;
+    text-align: center;
 }
 
 .dash-graph {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
+}
+
+#_pages_content {
+    margin: 0 5% 0 5%;
+    border-radius: 0 0 2.5vh 2.5vh;
+    background-color: white;
+    border: 1px solid black;
+    padding: 2vw;
 }
